zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__vttest2_12.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C):                    Graphic rendition test pattern:                                                            
01 (C):                                                                                                               
02 (C):                                                                                                               
03 (C): vanilla                                bold                                                                   
04 (C):                                                                                                               
05 (C):      underline                              bold underline                                                    
06 (C):                                                                                                               
07 (C): blink                                  bold blink                                                             
08 (C):                                                                                                               
09 (C):      underline blink                        bold underline blink                                              
10 (C):                                                                                                               
11 (C): negative                               bold negative                                                          
12 (C):                                                                                                               
13 (C):      underline negative                     bold underline negative                                           
14 (C):                                                                                                               
15 (C): blink negative                         bold blink negative                                                    
16 (C):                                                                                                               
17 (C):      underline blink negative               bold underline blink negative                                     
18 (C):                                                                                                               
19 (C):                                                                                                               
20 (C):                                                                                                               
21 (C):                                                                                                               
22 (C): Dark background. Push <RETURN>                                                                                
23 (C):                                                                                                               
24 (C):                                                                                                               
25 (C):                                                                                                               
26 (C):                                                                                                               
27 (C):                                                                                                               
28 (C):                                                                                                               
29 (C):                                                                                                               
30 (C):                                                                                                               
31 (C):                                                                                                               
32 (C):                                                                                                               
33 (C):                                                                                                               
34 (C):                                                                                                               
35 (C):                                                                                                               
36 (C):                                                                                                               
37 (C):                                                                                                               
38 (C):                                                                                                               
39 (C):                                                                                                               
40 (C):                                                                                                               

